# CLUMondo

./: .gitignore  CMakeLists.txt  LICENCE.md  LICENSE  README.md
clumondo/: CMakeLists.txt  clumondomodules.cpp  globals.cpp  log.fil  main.cpp  util.cpp
include/: CLUMondoConfig.h  CLUMondoConfig.h.in  clumondomodules.h  globals.h  util.h
